# cli-on-mac

./: .clawhubignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  demo.py  demo_recording.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add-app.md  bug-report.md
.github/workflows/: ci.yml
docs/: README-AI.md  README-zh.md  README.md
src/clam/: cli.py  i18n.py  mcp_server.py  output.py
src/clam/generator/: applescript_gen.py  installer.py  specifier_defaults.py
src/clam/generator/templates/: applescript_cli.py.j2  basic_cli.py.j2  setup.py.j2  ui_scripting_cli.py.j2
src/clam/registry/: registry.py
src/clam/scanner/: app_scanner.py  menu_scanner.py  sdef_parser.py
src/clam/strings/: en.py  zh.py
tests/: conftest.py  test_app_scanner.py  test_applescript_gen.py  test_cli.py  test_i18n.py  test_mcp_server.py  test_registry.py  test_sdef_parser.py  test_specifier_defaults.py
