[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clam"
version = "0.1.0"
description = "CLI Agent for Mac — 扫描你的 Mac，一键生成 AI 可用的 CLI 接口"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
clam = "clam.cli:cli"

[tool.pytest.ini_options]
timeout = 30

[tool.setuptools.packages.find]
where = ["src"]
